# gdextension_test

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.1  README.md  SConstruct  android.sh  clean.sh  debug.sh
lib/: dll_project.h  godot_cpp_android.sh  godot_cpp_ios.sh  godot_cpp_windows.sh
src/: register_types.cpp  register_types.h  topiot_ai.cpp  topiot_ai.h
test/: example.gdextension  icon.svg.import  project.godot
test/components/editor_nodo/: editor_node.gd  editor_node.tscn
test/editor/: editor.gd  editor.tscn
test/test_file/: s1891.jpg.import  s1891.xml  s1981-2.png.import
test_dll/: CmakeLists.txt
test_dll/lib/: TopAIEngine.exp  dll_project.h
test_dll/src/: test.cpp
test_dll/test_file/: s1891.xml  s20230418.xml
